--- a/src/app/test1/test1.page.html
+++ b/src/app/test1/test1.page.html
@@ -3,7 +3,7 @@
       <ion-buttons slot="start">
           <ion-back-button
               text=""
-              defaultHref="home">
+              defaultHref="tabs/home">
           </ion-back-button>
         </ion-buttons>
     <ion-title>test1</ion-title>
