--- a/src/app/test2/test2.page.html
+++ b/src/app/test2/test2.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button
           text=""
-          defaultHref="home">
+          defaultHref="tabs/home">
       </ion-back-button>
     </ion-buttons>
     <ion-title>test2</ion-title>
