--- a/src/app/test1/test1.page.html
+++ b/src/app/test1/test1.page.html
@@ -1,10 +1,7 @@
 <ion-header>
   <ion-toolbar>
       <ion-buttons slot="start">
-          <ion-back-button
-              text=""
-              defaultHref="tabs/home">
-          </ion-back-button>
+          <ion-menu-button></ion-menu-button>
         </ion-buttons>
     <ion-title>test1</ion-title>
   </ion-toolbar>
