--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,6 +10,17 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+    <ion-content>
+        <ion-virtual-scroll [items]="items" approxItemHeight="320px">
+          <ion-card *virtualItem="let item; let itemBounds = bounds;">
+            <div>
+              <img [src]="item.imgSrc" [height]="item.imgHeight" [alt]="item.name">
+            </div>
+          <ion-card-header>
+            <ion-card-title>{{ item.name }}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>{{ item.content }}</ion-card-content>
+          </ion-card>
+        </ion-virtual-scroll>
+      </ion-content>
 </ion-content>
